WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54999
Manage MarkedBlocks in a linked list instead of a vector, so arbitrary removal is O(1)
https://bugs.webkit.org/show_bug.cgi?id=54999
Summary
Manage MarkedBlocks in a linked list instead of a vector, so arbitrary remova...
Geoffrey Garen
Reported
2011-02-22 14:13:27 PST
Managed MarkedBlocks in a linked list instead of a vector, so arbitrary removal is O(1)
Attachments
Patch
(20.10 KB, patch)
2011-02-22 14:19 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(14.42 KB, patch)
2011-02-23 11:35 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(17.54 KB, patch)
2011-02-23 11:43 PST
,
Geoffrey Garen
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-02-22 14:19:59 PST
Created
attachment 83389
[details]
Patch
Oliver Hunt
Comment 2
2011-02-22 15:00:28 PST
Comment on
attachment 83389
[details]
Patch r=me
Geoffrey Garen
Comment 3
2011-02-22 15:23:49 PST
Committed
r79367
: <
http://trac.webkit.org/changeset/79367
>
Ryosuke Niwa
Comment 4
2011-02-22 19:13:19 PST
This patch caused all tests to crash on Snow Leopard:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r79366%20(25764)/
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r79367%20(25765)/results.html
I'm rolling this patch per olliej's suggestion.
Simon Fraser (smfr)
Comment 5
2011-02-22 21:33:44 PST
Reopening, since it was rolled out.
Geoffrey Garen
Comment 6
2011-02-23 11:35:05 PST
Created
attachment 83513
[details]
Patch
Darin Adler
Comment 7
2011-02-23 11:38:49 PST
Comment on
attachment 83513
[details]
Patch This patch does not include the DoublyLinkedList.h header, but includes many references to it!
Geoffrey Garen
Comment 8
2011-02-23 11:43:07 PST
Created
attachment 83516
[details]
Patch
Darin Adler
Comment 9
2011-02-23 11:46:13 PST
Comment on
attachment 83516
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83516&action=review
> Source/JavaScriptCore/runtime/MarkedSpace.cpp:58 > + MarkedBlock* next = 0;
Doesn’t seem helpful to initialize this here.
Geoffrey Garen
Comment 10
2011-02-23 12:25:24 PST
Committed
r79472
: <
http://trac.webkit.org/changeset/79472
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug