Source/JavaScriptCore/JavaScriptCore.gypi
@@ -371,6 +371,7 @@
             'wtf/DecimalNumber.cpp',
             'wtf/Deque.h',
             'wtf/DisallowCType.h',
+            'wtf/DoublyLinkedList.h',
             'wtf/dtoa.cpp',
             'wtf/dtoa.h',
             'wtf/FastAllocBase.h',
